added logout option

--- a/src/app/dashboard/component/main/main.component.html
+++ b/src/app/dashboard/component/main/main.component.html
@@ -18,8 +18,8 @@
   <div class="main-content">
     <header class="topbar">
       <div class="title">Welcome, {{ farmerName }} 🌿</div>
-      <a routerLink="profile" routerLinkActive="active">
-        <img src="assets/user.png" alt="User" />
+      <a routerLink="login" routerLinkActive="active">
+        ↩️ Logout
       </a>
     </header>
 
