--- a/src/app/dashboard/history/history.component.html
+++ b/src/app/dashboard/history/history.component.html
@@ -1,7 +1,7 @@
 <div class="dashboard-container">
   <div class="header-row">
     <h2>Past Applications</h2>
-    <button mat-raised-button color="primary" routerLink="/dashboard/start-application">Start New Application</button>
+    <!-- <button mat-raised-button color="primary" routerLink="/dashboard/start-application">Start New Application</button> -->
   </div>
 
   <ng-container *ngIf="pastApplications.length > 0; else noApplications">
