--- a/src/app/auth/register/register.component.scss
+++ b/src/app/auth/register/register.component.scss
@@ -3,7 +3,8 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: url('/assets/images/register-image.jpg') no-repeat center center / cover;
+  //background: url('/assets/images/register-image.jpg') no-repeat center center / cover;
+  background: linear-gradient(160deg, #2e7d32, #66bb6a);
   overflow: hidden;
 }
 
