--- a/src/app/dashboard/component/main/main.component.scss
+++ b/src/app/dashboard/component/main/main.component.scss
@@ -13,7 +13,7 @@
   padding: 24px;
   box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
   height: 100vh;
-  
+
   .logo-wrapper {
     padding: 20px;
     text-align: center;
@@ -93,5 +93,20 @@
     width: auto;
   }
 }
+
+a {
+      color: rgb(0, 0, 0);
+      text-decoration: none;
+      padding: 10px 14px;
+      border-radius: 6px;
+      font-size: 0.95rem;
+      font-weight: bold;
+      transition: background 0.3s ease;
+
+      &.active,
+      &:hover {
+        background: rgba(255, 255, 255, 0.15);
+      }
+    }
 
 
