--- a/src/app/auth/register/register.component.scss
+++ b/src/app/auth/register/register.component.scss
@@ -4,7 +4,7 @@
   align-items: center;
   min-height: 100vh;
   //background: url('/assets/images/register-image.jpg') no-repeat center center / cover;
-  background: linear-gradient(160deg, #2e7d32, #66bb6a);
+  background: linear-gradient(160deg, #2e7d32, #afe3b2);
   overflow: hidden;
 }
 
